@@ -12,7 +12,7 @@ AS=		2a
 ASFLAGS=
 
 CC=		2c
-CFLAGS=		-wFV -I$ROOT/Plan9/68020/include -I$ROOT/include
+CFLAGS=		-wFV -I$ROOT/Plan9/$OBJTYPE/include -I$ROOT/Plan9/include -I$ROOT/include
 ANSICPP= -p
 
 LD=		2l
