@@ -12,7 +12,7 @@ AS=		qa
 ASFLAGS=
 
 CC=		qc
-CFLAGS=		-wFV -I$ROOT/Plan9/power/include -I$ROOT/include
+CFLAGS=		-wFV -I$ROOT/Plan9/$OBJTYPE/include -I$ROOT/Plan9/include -I$ROOT/include
 ANSICPP= -p
 
 LD=		ql
